corrigé plien de fautes

--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -207,35 +207,34 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 
 \cventre[1.3em]{2015}{Développeur full-stack}
 {GSOFT}
-{Travail en mode agile sur plusieurs projet avec des équipes allant de 2 à 6 développeurs. Responsable de l'architecture de plusieurs fonctionnalités et impliqué dans la conception de beaucoup d'autres autant front-end que back-end. }
+{Travail en mode agile sur plusieurs projets avec des équipes allant de 2 à 6 développeurs. Responsable de l'architecture de plusieurs fonctionnalités et impliqué dans la conception de beaucoup d'autres autant front-end que back-end. }
 {$\bullet$ Agile  $\bullet$ Conception d'API $\bullet$ SQL Server $\bullet$ RavenDB (non relationnelle) $\bullet$ Microsoft Azure $\bullet$ Architecture d'application sous forme de service $\bullet$ Relation direct avec les clients }
 
 \cventre[1.3em]{2013}{Stagiaire}
 {Ville de Montréal}
 {Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
-{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'application sous forme de service}
-
+{$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end (Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'application sous forme de service}
 
 \cventre[1.3em]{2012}{Développeur}
 {Fasken Martineau DuMoulin, S.E.N.C.R.L}
-{Programmation de templates avec l'API de XpressDox. Cette API s'intègre avec Microsoft Word et automatise la génération de document. J'étais le seul qui s'avais utiliser Xpressdox dans l'entreprise.}
-{$\bullet$ Développer un framework $\bullet$ Proposer des solutions techniques aux besoins des avocats \newline{} $\bullet$ Trouver des solutions à des problèmes sans ressource}
+{Programmation de templates avec l'API de XpressDox. Cette API s'intègre avec Microsoft Word et automatise la génération de document. J'étais le seul qui savais utiliser Xpressdox dans l'entreprise.}
+{$\bullet$ Développer un framework et outils de développement $\bullet$ Proposer des solutions aux besoins des avocats \newline{}}
 
 %-----------------------------------------------------------------------------------------------------------------------%
 %-------------------------------------------------- Réalisation Technique --------------------------------------------------%
 %-----------------------------------------------------------------------------------------------------------------------%
 \section{Réalisation Technique}
 \textbf{Système de gestion pour FNCM} \newline{}
-\small{Modernisation de leur ancien système pour un nouveau en mode SAS. Le nouveau système devait avoir toute les fonctionnalitées de l'ancien, mais avec des améliorations de vitesse plus d'autres fonctionnalité}
+\small{Modernisation de leur ancien système pour un nouveau en mode SAS. Le nouveau système devait avoir toute les fonctionnalitées de l'ancien, mais avec des améliorations de vitesse plus d'autres fonctionnalitées}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#, Knockout, SQL server, Entity framework}}\end{flushright}
-\cvprojectitem{BD (SQL)}{Scriptes sql complexe afin d'optimiser certaines mise-à-jour dont la performance était importante.}
+\cvprojectitem{BD (SQL)}{Scriptes de migration sql complexe afin d'optimiser certaines mise-à-jour dont la performance était importante.}
 \cvprojectitem{Front-end (Knockout)}{Mécanique d'édition et de d'annulation d'une modification.}
 \cvprojectitem{Front-end (Knockout)}{Développer une interface et une mécanique de recherche avancée.}
-\cvprojectitem{C\#, rdlc, Entity-Framework}{Développement de mécanismes de générations de rapport.}
+\cvprojectitem{C\#, rdlc, Entity-Framework}{Développement de mécanismes de générations de rapports qui sont utilisés pour faire de la comptabilité.}
 \vspace{1em}
 
 \textbf{SAS de gestion syndicale - Sentinelle} (\href{https://www.saisentinelle.ca/}{https://www.saisentinelle.ca/}) \newline
-\small{ Sentinelle est une plateforme \textit{SAS} \textit{multi-tetant} et personnalisable pour aider les syndicats de plusieurs domain dans la gestion de leur membres.}
+\small{ Sentinelle est une plateforme \textit{SAS} \textit{multi-tetant} et personnalisable pour aider les syndicats de plusieurs domaines dans la gestion de leur membres.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#, Knockout, RavenDb}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{BD Raven(NO SQL)}{Conceptualisé un schéma de base de donnée configurable. Cette application est multi-tenant et demandait donc une manière de configurer des environments selon les besoins uniques d'un client à l'autre}
@@ -248,15 +247,15 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \small{ Simetryk est une plateforme \textit{SAS} \textit{multi-tetant} et personnalisable de gestion centralisé de fournisseur.} \vspace{1em}\newline{} 
 
 \textbf{Portal de gestion de licenses - Sharegate} \newline
-\small{Un portal qui permet aux utilisateur d'avoir de l'information sur leur license ainsi que d'effectuer plusieurs manipulation.}
+\small{Un portal qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Évolution de système legacy}{Ajouter de nouvelles règles d'affaires a un système legacy hautement critique. Cela à requis une approche methodique et itérative.}
-\cvprojectitem{Infrastructure, microservice, CI}{Monter une infratructure avec des environments de developpement (dev, qa, uat, prod) et de continuous integration avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
+\cvprojectitem{Infrastructure, microservice, CI}{Monter une infratructure avec des environments de developpement (dev, qa, uat, prod) et de \textit{continuous integration} avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
 \vspace{1em}
 
 \textbf{Portal de ventes de licenses - Sharegate} \newline
-\small{Un portal qui permet a des revendeur de faires des quotes pour leur clients et vendre des licenses}
+\small{Un portal qui permet à des revendeurs de faires des quotes pour leur clients et vendre des licenses}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Sql/server, Azure Directory}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Event storming}{Afin de bien comprendre le besoin d'affaires et aligné les membres des différents département impliqués dans ce projet, nous avons utilisé la methologie de \textit{event storming}.}
@@ -267,12 +266,11 @@ qui a été discuté lors du \textit{Event storming}.}
 
 \textbf{Autres projets - Pour le plaisir} (\href{https://github.com/GitMyCode}{https://github.com/GitMyCode})\newline{}
 \small{ Plusieurs projets de programmation que j'ai fais dans mes temps libres.} \vspace{1em}\newline{} 
-\cvprojectitem{Application mobile (React-Native)}{Je travail présentement au développement d'une app mobile. Je suis en collaboration avec deux cardiologue qui écrivent le contenu. C'est une application qui permettra aux medecins d'avoir de l'information specialisé. 
+\cvprojectitem{Application mobile (React-Native)}{Je travail présentement au développement d'une app mobile. Je suis en collaboration avec deux cardiologues qui écrivent le contenu. C'est une application qui permettra aux medecins d'avoir de l'information specialisé directement sur leur téléphone. 
 Le contenu est écrit en \textit{markdown} qui est ensuite converti en react-native automatiquement.}
 \cvprojectitem{MineSweeper AI (Java)}{Un A.I qui résoud le jeu de minesweeper (\href{https://github.com/GitMyCode/MinesweeperAi}{https://github.com/GitMyCode/MinesweeperAi})}
 \cvprojectitem{CSGAMES 2016 (C\#)}{J'ai crée le défi que les participants devaient résoudre dans le cadre de la compétition algorithme des csgames de 2016 (\href{https://github.com/GitMyCode/csgames-algorithm-2016}{https://github.com/GitMyCode/csgames-algorithm-2016})}
 \textsl{}
-\newpage
 
 %-----------------------------------------------------------------------------------------------------------------------%
 %-------------------------------------------------- Travaux Pratiques --------------------------------------------------%
@@ -360,6 +358,4 @@ $\bullet$ \textbf{Programming Mobile Applications for Android Handheld Systems} 
 \item Graphisme: Grand intérêt pour le design web.
 \item Programmation: Toujours à la recherche de projets intéressants!
 \end{itemize}
-
-%\includepdfmerge{ReleverNotesNonOfficiel.pdf,-}
 \end{document}
