--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -260,7 +260,7 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \small{Un portal qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
 \vspace{1em}
-\cvprojectitem{Évolution de système legacy}{Ajouter de nouvelles règles d'affaires a un système legacy hautement critique. Cela à requis une approche methodique et itérative.}
+\cvprojectitem{Évolution de système legacy}{Ajouter de nouvelles règles d'affaires a un système legacy hautement critique. Cela a requis une approche methodique et itérative.}
 \cvprojectitem{Infrastructure, microservice, CI}{Monter une infratructure avec des environments de developpement (dev, qa, uat, prod) et de \textit{continuous integration} avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
 \vspace{1em}
 
